syntax = "proto3";

package modernmen;

// Appointment service for Modern Men Hair Salon
service AppointmentService {
  rpc CreateAppointment(CreateAppointmentRequest) returns (AppointmentResponse);
  rpc GetAppointment(GetAppointmentRequest) returns (AppointmentResponse);
  rpc UpdateAppointment(UpdateAppointmentRequest) returns (AppointmentResponse);
  rpc CancelAppointment(CancelAppointmentRequest) returns (AppointmentResponse);
  rpc ListAppointments(ListAppointmentsRequest) returns (ListAppointmentsResponse);
}

// Appointment data structure
message Appointment {
  string id = 1;
  string customer_id = 2;
  string stylist_id = 3;
  string service_id = 4;
  string date_time = 5; // ISO 8601 format
  int32 duration_minutes = 6;
  AppointmentStatus status = 7;
  string notes = 8;
  double price = 9;
  string created_at = 10;
  string updated_at = 11;
}

// Customer data structure
message Customer {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string avatar_url = 6;
  bool is_active = 7;
  string created_at = 8;
}

// Stylist data structure
message Stylist {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string bio = 6;
  repeated string specializations = 7;
  double hourly_rate = 8;
  bool is_active = 9;
  string created_at = 10;
}

// Service data structure
message Service {
  string id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 duration_minutes = 5;
  string category = 6;
  bool is_active = 7;
  string created_at = 8;
}

// Appointment status enum
enum AppointmentStatus {
  PENDING = 0;
  CONFIRMED = 1;
  IN_PROGRESS = 2;
  COMPLETED = 3;
  CANCELLED = 4;
  NO_SHOW = 5;
}

// Request/Response messages
message CreateAppointmentRequest {
  string customer_id = 1;
  string stylist_id = 2;
  string service_id = 3;
  string date_time = 4;
  string notes = 5;
}

message GetAppointmentRequest {
  string appointment_id = 1;
}

message UpdateAppointmentRequest {
  string appointment_id = 1;
  string date_time = 2;
  string stylist_id = 3;
  string service_id = 4;
  string notes = 5;
  AppointmentStatus status = 6;
}

message CancelAppointmentRequest {
  string appointment_id = 1;
  string reason = 2;
}

message ListAppointmentsRequest {
  string customer_id = 1;
  string stylist_id = 2;
  string date_from = 3;
  string date_to = 4;
  AppointmentStatus status = 5;
  int32 page = 6;
  int32 limit = 7;
}

message AppointmentResponse {
  bool success = 1;
  Appointment appointment = 2;
  string message = 3;
  string error = 4;
}

message ListAppointmentsResponse {
  bool success = 1;
  repeated Appointment appointments = 2;
  int32 total = 3;
  int32 page = 4;
  int32 limit = 5;
  string message = 6;
  string error = 7;
}
